[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_idle_0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_idle_1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_idle_3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_idle_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_walk_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_walk_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_walk_0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Enemies/Zombie/E__Zombie_walk_3.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Daemarrel/ExplodingZombie.gd" type="Script" id=9]
[ext_resource path="res://audio/explode.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.88327, 3.94416 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 59.7356, 14.6637 )

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[node name="ExplodingZombie" type="KinematicBody2D" groups=[
"Mob",
]]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Sight" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )

[node name="boomarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boomarea"]
shape = SubResource( 4 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="boomarea" to="." method="_on_boomarea_body_entered"]
[connection signal="body_exited" from="boomarea" to="." method="_on_boomarea_body_exited"]
